@@ -7,42 +7,43 @@ import habsida.spring.boot_security.demo.repository.UserRepository;
 import org.springframework.boot.CommandLineRunner;
 import org.springframework.boot.SpringApplication;
 import org.springframework.boot.autoconfigure.SpringBootApplication;
-import org.springframework.context.annotation.Bean;
 import org.springframework.security.crypto.password.PasswordEncoder;
+import org.springframework.context.annotation.Bean;
 
-import java.util.Arrays;
-import java.util.HashSet;
+import java.util.Set;
 
 @SpringBootApplication
 public class SpringBootSecurityDemoApplication {
-
     public static void main(String[] args) {
         SpringApplication.run(SpringBootSecurityDemoApplication.class, args);
     }
 
     @Bean
-    CommandLineRunner seed(RoleRepository roles, UserRepository users, PasswordEncoder encoder) {
+    CommandLineRunner seed(RoleRepository roleRepo,
+                           UserRepository userRepo,
+                           PasswordEncoder encoder) {
         return args -> {
-            Role admin = roles.findByName("ADMIN").orElseGet(() -> roles.save(new Role(null, "ADMIN")));
-            Role userR = roles.findByName("USER").orElseGet(() -> roles.save(new Role(null, "USER")));
+            Role admin = roleRepo.findByName("ADMIN").orElseGet(() -> roleRepo.save(new Role("ADMIN")));
+            Role userR = roleRepo.findByName("USER").orElseGet(() -> roleRepo.save(new Role("USER")));
 
-            if (users.findByUsername("admin").isEmpty()) {
-                User a = new User();
-                a.setUsername("admin");
-                a.setPassword(encoder.encode("admin123"));
-                a.setName("Admin");
-                a.setEmail("admin@example.com");
-                a.setRoles(new HashSet<>(Arrays.asList(admin, userR)));
-                users.save(a);
+            if (userRepo.findByUsername("admin").isEmpty()) {
+                User adminU = new User();
+                adminU.setUsername("admin");
+                adminU.setPassword(encoder.encode("admin123"));
+                adminU.setName("Admin");
+                adminU.setEmail("admin@example.com");
+                adminU.setRoles(Set.of(admin, userR));
+                userRepo.save(adminU);
             }
-            if (users.findByUsername("john").isEmpty()) {
-                User u = new User();
-                u.setUsername("john");
-                u.setPassword(encoder.encode("user123"));
-                u.setName("John");
-                u.setEmail("john@example.com");
-                u.setRoles(new HashSet<>(Arrays.asList(userR)));
-                users.save(u);
+
+            if (userRepo.findByUsername("john").isEmpty()) {
+                User john = new User();
+                john.setUsername("john");
+                john.setPassword(encoder.encode("user123"));
+                john.setName("John");
+                john.setEmail("john@example.com");
+                john.setRoles(Set.of(userR));
+                userRepo.save(john);
             }
         };
     }
